Mario's comments to the summary
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5282 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/summary.tex
+++ b/2010/thesis/summary.tex
@@ -299,7 +299,7 @@ The forward protons, before being registered by the RP detectors, pass through t
 
 \> The \em{high-$\be^*$} scenario with $\be^* = 1535\un{m}$ optics and luminosity ${\cal L} \approx 10^{28} \un{cm^{-2}s^{-1}}$ is dedicated to the measurement of the total cross-section and low-$|t|$ elastic scattering. In this scenario, the RPs have an excellent angular resolution $0.3\un{mrad}$. The elastic cross-section will be measured down to $|t| \approx 2\cdot10^{-3}\un{GeV^2}$.
 
-\> The \em{medium-$\be^*$} scenario with $\be^* = 90\un{m}$ optics and luminosity ${\cal L} \approx 10^{28} \hbox{ -- } 10^{29}\un{cm^{-2}s^{-1}}$ combines the properties of high and low $\be^*$ scenarios allowing for measurements of the total cross-section, medium-$|t|$ elastic scattering and all diffractive processes. The vertical angular resolution is about $2.4\un{\mu rad}$, the elastic cross-section can be measured down to $|t| \approx 4\cdot 10^{-2}\un{GeV^2}$.
+\> The \em{medium-$\be^*$} scenario with $\be^* = 90\un{m}$ optics and luminosity ${\cal L} \approx 10^{28}\un{cm^{-2}s^{-1}}$ combines the properties of high and low $\be^*$ scenarios allowing for measurements of the total cross-section, medium-$|t|$ elastic scattering and all diffractive processes. The vertical angular resolution is about $2.4\un{\mu rad}$, the elastic cross-section can be measured down to $|t| \approx 10^{-2}\un{GeV^2}$.
 
 \> The \em{low-$\be^*$} scenarios with $\be^*$ between $0.5$ and $3.5\un{m}$ were primarily designed for high luminosities ${\cal L} \approx 10^{32} \hbox{ -- } 10^{33}\un{cm^{-2}s^{-1}}$. They allow for diffractive studies and large-$|t|$ elastic scattering measurements. The angular resolution is about $16\un{\mu rad}$. The lowest reachable elastic $|t|$ depends on the actual $\be^*$ value. For the standard 2010 optics ($\be^* = 3.5\un{m}$ and $\sqrt s = 7\un{TeV}$), the elastic cross-section was measured down to $|t| \approx 0.4\un{GeV^2}$.
 
