--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -353,6 +353,15 @@
       year           = "2011",
 }
 
+@Url{kundrat11,
+      author       = "KUNDR\' AT, V. et al.",
+      title        = "Form factors and elastic scattering of protons at high energies",
+      year         = "2011",
+	  url			= "https://indico.cern.ch/getFile.py/access?contribId=37\&resId=0\&materialId=slides\&confId\==121894"
+	  note			= "Talk presented at the March TOTEM collaboration meeting in Kirchberg, Austria"
+}
+
+
 #------------------------------------------ FORM FACTORS --------------------------------------------
 
 @Article{hofstadter58,
@@ -1537,7 +1546,7 @@
 	  ISBN		   = "unknown"
 }
 
-@book{pilkuhn79,
+@Book{pilkuhn79,
       author       = "PILKUHN, H.",
       title        = "Relativistic particle physics",
       publisher    = "Springer",
@@ -1545,6 +1554,7 @@
       series       = "Texts and monographs in physics",
       year         = "1979",
 	  ISBN		   = "0-387-09348-6"
+	edition	=	"1st"
 }
 
 @Article{pdg10,
